--- a/portfolio/style/style.css
+++ b/portfolio/style/style.css
@@ -1,5 +1,11 @@
 /* Reset básico para garantir consistência no layout */
-* {
+* 
+{
+scroll-behavior: smooth;
+}
+
+
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
